--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,7 @@ img {
     max-width: 128rem;
 
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
     align-items: center;
     justify-items: center;
     gap: 4rem;
